@@ -26,17 +26,18 @@ import com.badlogic.gdx.utils.IntIntMap;
 /** Takes a {@link Camera} instance and controls it via w,a,s,d and mouse panning.
  * @author badlogic */
 public class FirstPersonCameraController extends InputAdapter {
-	private final Camera camera;
-	private final IntIntMap keys = new IntIntMap();
-	private int STRAFE_LEFT = Keys.A;
-	private int STRAFE_RIGHT = Keys.D;
-	private int FORWARD = Keys.W;
-	private int BACKWARD = Keys.S;
-	private int UP = Keys.Q;
-	private int DOWN = Keys.E;
-	private float velocity = 5;
-	private float degreesPerPixel = 0.5f;
-	private final Vector3 tmp = new Vector3();
+	protected final Camera camera;
+	protected final IntIntMap keys = new IntIntMap();
+	public int strafeLeftKey = Keys.A;
+	public int strafeRightKey = Keys.D;
+	public int forwardKey = Keys.W;
+	public int backwardKey = Keys.S;
+	public int upKey = Keys.Q;
+	public int downKey = Keys.E;
+	public boolean autoUpdate = true;
+	protected float velocity = 5;
+	protected float degreesPerPixel = 0.5f;
+	protected final Vector3 tmp = new Vector3();
 
 	public FirstPersonCameraController (Camera camera) {
 		this.camera = camera;
@@ -73,7 +74,6 @@ public class FirstPersonCameraController extends InputAdapter {
 		camera.direction.rotate(camera.up, deltaX);
 		tmp.set(camera.direction).crs(camera.up).nor();
 		camera.direction.rotate(tmp, deltaY);
-// camera.up.rotate(tmp, deltaY);
 		return true;
 	}
 
@@ -82,30 +82,31 @@ public class FirstPersonCameraController extends InputAdapter {
 	}
 
 	public void update (float deltaTime) {
-		if (keys.containsKey(FORWARD)) {
+		if (keys.containsKey(forwardKey)) {
 			tmp.set(camera.direction).nor().scl(deltaTime * velocity);
 			camera.position.add(tmp);
 		}
-		if (keys.containsKey(BACKWARD)) {
+		if (keys.containsKey(backwardKey)) {
 			tmp.set(camera.direction).nor().scl(-deltaTime * velocity);
 			camera.position.add(tmp);
 		}
-		if (keys.containsKey(STRAFE_LEFT)) {
+		if (keys.containsKey(strafeLeftKey)) {
 			tmp.set(camera.direction).crs(camera.up).nor().scl(-deltaTime * velocity);
 			camera.position.add(tmp);
 		}
-		if (keys.containsKey(STRAFE_RIGHT)) {
+		if (keys.containsKey(strafeRightKey)) {
 			tmp.set(camera.direction).crs(camera.up).nor().scl(deltaTime * velocity);
 			camera.position.add(tmp);
 		}
-		if (keys.containsKey(UP)) {
+		if (keys.containsKey(upKey)) {
 			tmp.set(camera.up).nor().scl(deltaTime * velocity);
 			camera.position.add(tmp);
 		}
-		if (keys.containsKey(DOWN)) {
+		if (keys.containsKey(downKey)) {
 			tmp.set(camera.up).nor().scl(-deltaTime * velocity);
 			camera.position.add(tmp);
 		}
-		camera.update(true);
+		if (autoUpdate)
+			 camera.update(true);
 	}
 }
